--- a/Views/Home/Result.cshtml
+++ b/Views/Home/Result.cshtml
@@ -17,10 +17,12 @@
             <span>Lenguaje Favorito: </span>
             <span>@Model.Lenguaje</span>
         </div>
-        <div class="item result">
-            <span>Comentario: </span>
-            <span>@Model.Comentario</span>
-        </div>
+        @if(Model.Comentario != null){
+            <div class="item result">
+                <span>Comentario: </span>
+                <span>@Model.Comentario</span>
+            </div>
+        }        
         <form method="GET" asp-controller="Home" asp-action="Index">
             <div class="item boton">    
                 <button>Volver</button>                  
